--- a/Dockerfile.android
+++ b/Dockerfile.android
@@ -1,21 +1,22 @@
-FROM steeve/cross-android
+FROM steeve/cross-compiler:android-arm
 MAINTAINER Steeve Morin "steeve.morin@gmail.com"
 
 RUN mkdir -p /build
 
 # Install Boost.System
 RUN cd /build && \
-    curl -L http://sourceforge.net/projects/boost/files/boost/1.55.0/boost_1_55_0.tar.bz2/download | tar xvj
-RUN cd /build/boost_1_55_0 && \
+    curl -L http://sourceforge.net/projects/boost/files/boost/1.56.0/boost_1_55_0.tar.bz2/download | tar xvj
+RUN cd /build/boost_1_56_0 && \
     ./bootstrap.sh --prefix=${CROSS_ROOT} && \
-    echo "using gcc : android : ${CROSS_TRIPLE}-c++ ;" > tools/build/v2/user-config.jam && \
+    echo "using gcc : android : ${CROSS_TRIPLE}-c++ ;" > ${HOME}/user-config.jam && \
     ./b2 --with-date_time --with-system --prefix=${CROSS_ROOT} toolset=gcc-android link=static variant=release threading=multi target-os=linux install && \
-    ${CROSS_TRIPLE}-ranlib ${CROSS_ROOT}/lib/*.a
+    ${CROSS_TRIPLE}-ranlib ${CROSS_ROOT}/lib/*.a && \
+    rm -rf ${HOME}/user-config.jam
 
 # Install OpenSSL
 RUN cd /build && \
-    curl -L http://www.openssl.org/source/openssl-1.0.1h.tar.gz | tar xvz
-RUN cd /build/openssl-1.0.1h && \
+    curl -L http://www.openssl.org/source/openssl-1.0.1i.tar.gz | tar xvz
+RUN cd /build/openssl-1.0.1i && \
     CROSS_COMPILE=${CROSS_TRIPLE}- ./Configure threads no-shared linux-armv4 --prefix=${CROSS_ROOT} && \
     make && make install && \
     ${CROSS_TRIPLE}-ranlib ${CROSS_ROOT}/lib/*.a
@@ -24,14 +25,19 @@ RUN cd /build/openssl-1.0.1h && \
 # - proper defines for INT limits
 # - disable pool alocators as they cause problems
 RUN cd /build && \
-    curl -L http://sourceforge.net/projects/libtorrent/files/libtorrent/libtorrent-rasterbar-1.0.0.tar.gz/download | tar xvz
-RUN cd /build/libtorrent-rasterbar-1.0.0 && \
+    curl -L http://sourceforge.net/projects/libtorrent/files/libtorrent/libtorrent-rasterbar-1.0.2.tar.gz/download | tar xvz
+RUN cd /build/libtorrent-rasterbar-1.0.2/ && \
+    sed -i 's/$PKG_CONFIG openssl --libs-only-/$PKG_CONFIG openssl --static --libs-only-/' ./configure && \
+    sed -i -e s/Windows.h/windows.h/ -e s/Wincrypt.h/wincrypt.h/ ./ed25519/src/seed.cpp
+RUN cd /build/libtorrent-rasterbar-1.0.2 && \
+    PKG_CONFIG_PATH=${CROSS_ROOT}/lib/pkgconfig/ \
     CC=${CROSS_TRIPLE}-gcc CXX=${CROSS_TRIPLE}-g++ \
-    CXXFLAGS="-DINT64_MAX=0x7fffffffffffffffLL -DINT16_MAX=32767 -DINT16_MIN=-32768" \
+    CFLAGS="${CFLAGS} -O2 -DINT64_MAX=0x7fffffffffffffffLL -DINT16_MAX=32767 -DINT16_MIN=-32768" \
+    CXXFLAGS="${CXXFLAGS} ${CFLAGS}" \
     ./configure --enable-static --disable-shared --disable-pool-allocators --disable-deprecated-functions \
     --host=${CROSS_TRIPLE} --prefix=${CROSS_ROOT} \
     --with-boost=${CROSS_ROOT} --with-boost-libdir=${CROSS_ROOT}/lib
-RUN cd /build/libtorrent-rasterbar-1.0.0 && \
+RUN cd /build/libtorrent-rasterbar-1.0.2 && \
     make && make install && \
     ${CROSS_TRIPLE}-ranlib ${CROSS_ROOT}/lib/*.a
 
