Update to boost 1.57.0, openssl 1.0.1j, SWIG 3.0.3-dev (patched), Go 1.4beta1
Basically bring all the other platforms to darwin-x64 level.

Signed-off-by: Steeve Morin <steeve.morin@gmail.com>

--- a/windows-x86/Dockerfile
+++ b/windows-x86/Dockerfile
@@ -5,24 +5,27 @@ RUN mkdir -p /build
 WORKDIR /build
 
 # Install Boost.System
-RUN curl -L http://sourceforge.net/projects/boost/files/boost/1.56.0/boost_1_56_0.tar.bz2/download | tar xvj && \
-    cd boost_1_56_0/ && \
+ENV BOOST_VERSION 1.57.0
+RUN curl -L http://sourceforge.net/projects/boost/files/boost/${BOOST_VERSION}/boost_`echo ${BOOST_VERSION} | sed 's/\\./_/g'`.tar.bz2/download | tar xvj && \
+    cd boost_`echo ${BOOST_VERSION} | sed 's/\\./_/g'`/ && \
     ./bootstrap.sh --prefix=${CROSS_ROOT} && \
     echo "using gcc : mingw32 : ${CROSS_TRIPLE}-c++ ;" > ${HOME}/user-config.jam && \
     ./b2 --with-date_time --with-system --prefix=${CROSS_ROOT} toolset=gcc-mingw32 link=static variant=release threading=multi target-os=windows threadapi=win32 install && \
     rm -rf ${HOME}/user-config.jam && \
-    rm -rf ../boost_1_56_0/
+    rm -rf ../boost_`echo ${BOOST_VERSION} | sed 's/\\./_/g'`/
 
 # Install OpenSSL
-RUN curl -L http://www.openssl.org/source/openssl-1.0.1i.tar.gz | tar xvz && \
-    cd openssl-1.0.1i/ && \
+ENV OPENSSL_VERSION 1.0.1j
+RUN curl -L http://www.openssl.org/source/openssl-${OPENSSL_VERSION}.tar.gz | tar xvz && \
+    cd openssl-${OPENSSL_VERSION}/ && \
     CROSS_COMPILE=${CROSS_TRIPLE}- ./Configure threads no-shared mingw --prefix=${CROSS_ROOT} && \
     make && make install && \
-    rm -rf ../openssl-1.0.1i/
+    rm -rf ../openssl-${OPENSSL_VERSION}/
 
 # Install libtorrent
-RUN curl -L http://sourceforge.net/projects/libtorrent/files/libtorrent/libtorrent-rasterbar-1.0.2.tar.gz/download | tar xvz && \
-    cd libtorrent-rasterbar-1.0.2/ && \
+ENV LIBTORRENT_VERSION 1.0.2
+RUN curl -L http://sourceforge.net/projects/libtorrent/files/libtorrent/libtorrent-rasterbar-${LIBTORRENT_VERSION}.tar.gz/download | tar xvz && \
+    cd libtorrent-rasterbar-${LIBTORRENT_VERSION}/ && \
     sed -i 's/$PKG_CONFIG openssl --libs-only-/$PKG_CONFIG openssl --static --libs-only-/' ./configure && \
     sed -i -e s/Windows.h/windows.h/ -e s/Wincrypt.h/wincrypt.h/ ./ed25519/src/seed.cpp && \
     \
@@ -35,21 +38,32 @@ RUN curl -L http://sourceforge.net/projects/libtorrent/files/libtorrent/libtorre
     --with-boost=${CROSS_ROOT} --with-boost-libdir=${CROSS_ROOT}/lib && \
     \
     make && make install && \
-    rm -rf ../libtorrent-rasterbar-1.0.2/
+    rm -rf ../libtorrent-rasterbar-${LIBTORRENT_VERSION}/
 
 # Install SWIG
-RUN apt-get update && apt-get install -y libpcre3-dev && \
-    curl -L http://sourceforge.net/projects/swig/files/swig/swig-3.0.2/swig-3.0.2.tar.gz/download | tar xvz && \
-    cd swig-3.0.2/ && \
+# Need to build from >3.0.2 because Go 1.4beta1
+# Also, revert https://github.com/swig/swig/commit/255c929c5636f54c16261bd92b8eea2005d61b11 as it breaks boost
+RUN apt-get update && apt-get install -y libpcre3-dev bison yodl
+RUN curl -L https://github.com/swig/swig/archive/master.tar.gz | tar xvz && \
+    cd swig-master/ && \
+    curl -L https://github.com/swig/swig/commit/255c929c5636f54c16261bd92b8eea2005d61b11.diff | patch -Rp1 && \
+    curl -L https://github.com/steeve/swig/commit/c9b687108ec3550103db6525b4860ba21a485ecd.diff | patch -p1 && \
+    curl -L https://github.com/steeve/swig/commit/e70fce1c1cf928564f009ea512c6c3acb97ace16.diff | patch -p1 && \
+    curl -L https://github.com/steeve/swig/commit/3ff0a187e8ed4bc406c17835db8a2bdb22bb0203.diff | patch -p1 && \
+    ./autogen.sh && \
     ./configure && make && make install && \
-    rm -rf ../swig-3.0.2/
+    rm -rf ../swig-master/
 
 # Install Golang
+ENV GO_VERSION 1.4beta1
 RUN cd /usr/local && \
-    curl -L http://golang.org/dl/go1.3.3.src.tar.gz | tar xvz && \
+    curl -L http://golang.org/dl/go${GO_VERSION}.src.tar.gz | tar xvz && \
     cd /usr/local/go/src && \
     GOOS=windows GOARCH=386 ./make.bash
 ENV PATH ${PATH}:/usr/local/go/bin
+
+# Build CGO
+RUN CC=${CROSS_TRIPLE}-cc GOOS=windows GOARCH=386 CGO_ENABLED=1 go install -v runtime/cgo
 
 WORKDIR /
 RUN rm -rf /build
