--- a/darwin-x64/Dockerfile
+++ b/darwin-x64/Dockerfile
@@ -61,11 +61,8 @@ ENV GO_VERSION 1.4beta1
 RUN cd /usr/local && \
     curl -L http://golang.org/dl/go${GO_VERSION}.src.tar.gz | tar xvz && \
     cd /usr/local/go/src && \
-    GOOS=darwin GOARCH=amd64 ./make.bash
+    CC_FOR_TARGET=${CROSS_TRIPLE}-cc CXX_FOR_TARGET=${CROSS_TRIPLE}-c++ GOOS=darwin GOARCH=amd64 CGO_ENABLED=1 ./make.bash
 ENV PATH ${PATH}:/usr/local/go/bin
-
-# Build CGO
-RUN CC=${CROSS_TRIPLE}-cc GOOS=darwin GOARCH=amd64 CGO_ENABLED=1 go install -v runtime/cgo
 
 WORKDIR /
 RUN rm -rf /build
