--- a/windows-x86/Dockerfile
+++ b/windows-x86/Dockerfile
@@ -64,11 +64,8 @@ ENV GO_VERSION 1.4beta1
 RUN cd /usr/local && \
     curl -L http://golang.org/dl/go${GO_VERSION}.src.tar.gz | tar xvz && \
     cd /usr/local/go/src && \
-    GOOS=windows GOARCH=386 ./make.bash
+    CC_FOR_TARGET=${CROSS_TRIPLE}-cc CXX_FOR_TARGET=${CROSS_TRIPLE}-c++ GOOS=windows GOARCH=386 CGO_ENABLED=1 ./make.bash
 ENV PATH ${PATH}:/usr/local/go/bin
-
-# Build CGO
-RUN CC=${CROSS_TRIPLE}-cc GOOS=windows GOARCH=386 CGO_ENABLED=1 go install -v runtime/cgo
 
 WORKDIR /
 RUN rm -rf /build
