--- a/windows-x86/Dockerfile
+++ b/windows-x86/Dockerfile
@@ -12,7 +12,7 @@ RUN curl -L http://sourceforge.net/projects/boost/files/boost/${BOOST_VERSION}/b
     echo "using gcc : mingw32 : ${CROSS_TRIPLE}-c++ ;" > ${HOME}/user-config.jam && \
     ./b2 --with-date_time --with-system --prefix=${CROSS_ROOT} toolset=gcc-mingw32 link=static variant=release threading=multi target-os=windows threadapi=win32 install && \
     rm -rf ${HOME}/user-config.jam && \
-    rm -rf ../boost_`echo ${BOOST_VERSION} | sed 's/\\./_/g'`/
+    rm -rf `pwd`
 
 # Install OpenSSL
 ENV OPENSSL_VERSION 1.0.1j
@@ -20,7 +20,7 @@ RUN curl -L http://www.openssl.org/source/openssl-${OPENSSL_VERSION}.tar.gz | ta
     cd openssl-${OPENSSL_VERSION}/ && \
     CROSS_COMPILE=${CROSS_TRIPLE}- ./Configure threads no-shared mingw --prefix=${CROSS_ROOT} && \
     make && make install && \
-    rm -rf ../openssl-${OPENSSL_VERSION}/
+    rm -rf `pwd`
 
 # Somehow this is needed or libtorrent complains about boost
 RUN ${CROSS_TRIPLE}-ranlib ${CROSS_ROOT}/lib/*.a
@@ -43,7 +43,7 @@ RUN curl -L http://sourceforge.net/projects/libtorrent/files/libtorrent/libtorre
     --with-boost=${CROSS_ROOT} --with-boost-libdir=${CROSS_ROOT}/lib && \
     \
     make && make install && \
-    rm -rf ../libtorrent-rasterbar-${LIBTORRENT_VERSION}/
+    rm -rf `pwd`
 
 # Install SWIG
 # Need to build from >3.0.2 because Go 1.4beta1
@@ -57,7 +57,7 @@ RUN curl -L https://github.com/swig/swig/archive/master.tar.gz | tar xvz && \
     curl -L https://github.com/steeve/swig/compare/swig:master...fix-windows.diff | patch -p1 && \
     ./autogen.sh && \
     ./configure && make && make install && \
-    rm -rf ../swig-master/
+    rm -rf `pwd`
 
 # Install Golang
 ENV GO_VERSION 1.4rc1
