--- a/linux-arm/Dockerfile
+++ b/linux-arm/Dockerfile
@@ -43,12 +43,12 @@ RUN curl -L http://sourceforge.net/projects/libtorrent/files/libtorrent/libtorre
 # Install SWIG
 # Need to build from >3.0.2 because Go 1.4beta1
 # Also, revert https://github.com/swig/swig/commit/255c929c5636f54c16261bd92b8eea2005d61b11 as it breaks boost
+ENV SWIG_VERSION 01faf1baf92f3dc9c6c26b61c3e6db4f9d4e7784
 RUN apt-get update && apt-get install -y libpcre3-dev bison yodl
-RUN curl -L https://github.com/swig/swig/archive/master.tar.gz | tar xvz && \
-    cd swig-master/ && \
+RUN curl -L https://github.com/swig/swig/archive/${SWIG_VERSION}.tar.gz | tar xvz && \
+    cd swig-${SWIG_VERSION}/ && \
     curl -L https://github.com/swig/swig/commit/255c929c5636f54c16261bd92b8eea2005d61b11.diff | patch -Rp1 && \
-    curl -L https://github.com/steeve/swig/commit/c9b687108ec3550103db6525b4860ba21a485ecd.diff | patch -p1 && \
-    curl -L https://github.com/steeve/swig/compare/swig:master...packed-structs.diff | patch -p1 && \
+    curl -L https://github.com/steeve/swig/compare/swig:${SWIG_VERSION}...packed-structs.diff | patch -p1 && \
     ./autogen.sh && \
     ./configure && make && make install && \
     rm -rf `pwd`
