--- a/linux-arm/Dockerfile
+++ b/linux-arm/Dockerfile
@@ -41,7 +41,7 @@ RUN curl -L http://sourceforge.net/projects/libtorrent/files/libtorrent/libtorre
     rm -rf `pwd`
 
 # Install SWIG
-# Need to build from >3.0.2 because Go 1.4beta1
+# Need to build from >3.0.2 because Go 1.4
 # Also, revert https://github.com/swig/swig/commit/255c929c5636f54c16261bd92b8eea2005d61b11 as it breaks boost
 ENV SWIG_VERSION 01faf1baf92f3dc9c6c26b61c3e6db4f9d4e7784
 RUN apt-get update && apt-get install -y libpcre3-dev bison yodl
@@ -54,7 +54,7 @@ RUN curl -L https://github.com/swig/swig/archive/${SWIG_VERSION}.tar.gz | tar xv
     rm -rf `pwd`
 
 # Install Golang
-ENV GO_VERSION 1.4rc1
+ENV GO_VERSION 1.4
 RUN cd /usr/local && \
     curl -L http://golang.org/dl/go${GO_VERSION}.src.tar.gz | tar xvz && \
     cd /usr/local/go/src && \
